--- a/Camera_PhotoLibrary/Base.lproj/Main.storyboard
+++ b/Camera_PhotoLibrary/Base.lproj/Main.storyboard
@@ -15,9 +15,54 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZND-Tp-LcV">
+                                <rect key="frame" x="42" y="156" width="330" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="xPg-yT-Ju7"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9S-mY-f2J">
+                                <rect key="frame" x="42" y="396" width="115" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Choose Photo"/>
+                                <connections>
+                                    <action selector="OpenPhotosLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vp0-wd-Op2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ixB-0l-QNi">
+                                <rect key="frame" x="279" y="396" width="93" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Open Cam"/>
+                                <connections>
+                                    <action selector="OpenCam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hez-gF-nLK"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Favorite Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1n-vW-BBM">
+                                <rect key="frame" x="42" y="88" width="212" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ixB-0l-QNi" firstAttribute="top" secondItem="ZND-Tp-LcV" secondAttribute="bottom" constant="35" id="3iJ-eY-yBr"/>
+                            <constraint firstItem="j1n-vW-BBM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="42" id="HMa-H2-zAl"/>
+                            <constraint firstItem="y9S-mY-f2J" firstAttribute="top" secondItem="ZND-Tp-LcV" secondAttribute="bottom" constant="35" id="HpF-zk-pPX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="j1n-vW-BBM" secondAttribute="trailing" constant="160" id="Kdc-AO-FZP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZND-Tp-LcV" secondAttribute="trailing" constant="42" id="Pii-u4-iMT"/>
+                            <constraint firstItem="y9S-mY-f2J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="42" id="RGk-1H-RXy"/>
+                            <constraint firstItem="j1n-vW-BBM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="U6G-Og-P56"/>
+                            <constraint firstItem="ZND-Tp-LcV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="42" id="fdR-kg-JB8"/>
+                            <constraint firstItem="ZND-Tp-LcV" firstAttribute="top" secondItem="j1n-vW-BBM" secondAttribute="bottom" constant="47" id="iDg-cB-EbI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ixB-0l-QNi" secondAttribute="trailing" constant="42" id="pUn-Ko-uKG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImageView" destination="ZND-Tp-LcV" id="zue-sf-TZc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
